Hotfix #741 - fix shared filed display when filename is too long (more than 150 char).

--- a/src/main/webapp/css/theme0-ie8.css
+++ b/src/main/webapp/css/theme0-ie8.css
@@ -20,6 +20,10 @@
 	width: 430px !important;
 }
 
+#list td.fileProperties div {
+	ms-text-overflow:ellipsis;
+}
+
 
 
 /***************************************************************************/
