--- a/src/main/webapp/css/theme0-ie9.css
+++ b/src/main/webapp/css/theme0-ie9.css
@@ -42,4 +42,7 @@
 	left:451px !important;
 }
 
+#list td.fileProperties div {
+	ms-text-overflow:ellipsis;
+}
 /***************************************************************************/
